# argos3-examples

./: README
controllers/: CMakeLists.txt
controllers/footbot_task_allocation/: CMakeLists.txt  aladdin.cpp  aladdin.h  dta.cpp  dta.h  footbot_task_allocation.cpp  footbot_task_allocation.h  gcaa.cpp  gcaa.h  hedonic_game.cpp  hedonic_game.h  pso.cpp  pso.h  sta.cpp  sta.h  task_allocation.cpp  task_allocation.h
experiments/: task_allocation.argos
loop_functions/: CMakeLists.txt
loop_functions/task_allocation_loop_functions/: CMakeLists.txt  task_allocation_loop_functions.cpp  task_allocation_loop_functions.h  task_allocation_qt_user_functions.cpp  task_allocation_qt_user_functions.h
